FIX style bugs on b-width-wrap FIX style bugs on b-container

--- a/backpacks/components/src/BContainer/BContainer.styl
+++ b/backpacks/components/src/BContainer/BContainer.styl
@@ -20,8 +20,8 @@
   }
 
   @media $display-breakpoints.xs-only {
-    margin-left: auto
-    margin-right: auto
+    margin-left: $padding.narrow.horizontal
+    margin-right: $padding.narrow.horizontal
     padding: 0
   }
 }
