--- a/backpacks/components/src/Layout/BWidthWrap/BWidthWrap.styl
+++ b/backpacks/components/src/Layout/BWidthWrap/BWidthWrap.styl
@@ -15,6 +15,7 @@ element-margin()
   &--side {
     element-margin()
     flex: 1 0 auto
+    margin-left: 1.5rem
   }
 
   &--main {
@@ -27,10 +28,12 @@ element-margin()
 
     &--side {
       padding: .5rem .2rem
+      margin-left: 0
     }
 
     &--main {
       padding: .5rem .2rem
+      margin-top: 1rem
     }
   }
 }
